add license path

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ rust-version = "1.51.0" # stabilized const generics
 keywords = ["vec", "vector", "stack"]
 repository = "https://github.com/joo-was-already-taken/stack-vec.git"
 readme = "README.md"
+license-file = "LICENSE"
 
 [dependencies]
 rustversion = "1.0.17"
